# llm-metaheuristics

./: .gitignore  COPYenhanced_generation_metaheuristic.py  FRAMEWORK.py  IOHRAG_framework_efficient_algorithm_design.py  NEW_RAG_framework_efficient_algorithm_desig.py  OPTUNA_RAG_IOH.py  OPTUNA_RAG_custumhys.py  P1.py  RAG_custumhys.py  RAG_framework_efficient_algorithm_design.py  README.md  benchmark_func.py  class_embedding.py  convergence.py  empedding_python.py  enhanced_generation_metaheuristic.py  function_checker.py  graphics_performance.ipynb  ioh_try.py  llm.py  main_framework.py  metaheuristic.py  metaheuristic_creation.py  metaheuristic_creation_CUSTUMHYS.py  metaheuristic_creation_optuna_customhys.py  metaheuristic_creation_optuna_custumhys.py  metaheuristic_creation_optuna_ioh.py  metaheuristic_creation_simple.py  metaheuristic_creation_testing_myllama.py  my_functions.py  myllama3.modelfile  ollama-models.sh  ollama_output.py  ollama_output_20240923_085827.py  ollama_output_20240923_101719.py  ollama_output_20240923_103034.py  ollama_output_20240923_104331.py  ollama_output_20240923_104606.py  ollama_output_20240923_104929.py  ollama_output_20240924_192826.py  (+13 more)
algorithm_creation/: Operators_information.txt  information.txt  metaheuristic_selection.py  operation_selection.py  parameters_to_take.txt
collections/: information.txt
creating_ollama_models/: metaheuristic-llama3.modelfile  my-new-llama3.modelfile
embeddings/: parameters_to_take.txt.json
experiments-custumhys/: Ackley1.ipynb  Ackley1Fitness.txt  Ackley4.ipynb  AckleyFitness.txt  Alpine1.ipynb  Alpine2.ipynb  Brown.ipynb  (+12 more)
llm-app/: pyproject.toml
(+4780 files in other folders)
