[tool.poetry]
name = "llm-poetry"
version = "0.1.0"
description = "Dependencies for a LLM metaheuristic generation project"
authors = ["Valenriquez <enriquezlimvaleria@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
