[tool.poetry]
name = "llm-metaheuristics"
version = "0.1.0"
description = "Dependencies for an LLM Metaheuristic generator"
authors = ["Valenriquez <enriquezlimvaleria@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
