[tool.poetry]
name = "llm-metaheuristics"
version = "0.1.0"
description = "Dependencies for an LLM Metaheuristic generator"
authors = ["Valenriquez <enriquezlimvaleria@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.3.3"
chromadb = "^0.5.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
