[tool.poetry]
name = "llm-app"
version = "0.1.0"
description = ""
authors = ["Valenriquez <enriquezlimvaleria@outlook.com>"]
readme = "README.md"
packages = [{include = "llm_app"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
